<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/cl_menu_activity"
    tools:context=".ui.MenuActivity">

    <TextView
        android:id="@+id/tv_choose_your_enemy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_choose_the_enemy"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/iv_name_vs_player_menu_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/iv_name_vs_player_menu_activity"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/landing_page1"
        app:layout_constraintBottom_toTopOf="@id/tv_name_vs_player_menu_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_name_vs_player_menu_activity"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:gravity="center_horizontal"
        android:text="@string/text_landing_page1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.521" />

    <ImageView
        android:id="@+id/iv_com_vs_player_menu_activity"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/landing_page2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_vs_player_menu_activity" />

    <TextView
        android:id="@+id/tv_com_vs_player_menu_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/text_landing_page2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_vs_player_menu_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>