<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_title_first_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-black"
        android:rotation="-20"
        android:rotationX="0"
        android:rotationY="0"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/string_title_first_letter"
        android:textColor="@color/color_title_paper"

        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_title_second_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:rotation="-20"
        android:rotationX="0"
        android:rotationY="0"
        android:textColor="@color/color_title_rock"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/string_title_second_letter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_first_letter" />

    <TextView
        android:id="@+id/tv_title_third_letter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:rotation="-20"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/string_title_third_letter"
        android:textColor="@color/color_title_scissor"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_second_letter" />

    <TextView
        android:id="@+id/tv_result"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:background="@color/color_background_win"
        android:fontFamily="sans-serif-black"
        android:rotation="-20"
        android:text="@string/result_player1_win"
        android:textColor="@color/design_default_color_background"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_result2"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:background="@color/color_background_draw"
        android:fontFamily="sans-serif-black"
        android:foregroundGravity="fill_horizontal|center_horizontal"
        android:freezesText="false"
        android:rotation="-20"
        android:singleLine="false"
        android:soundEffectsEnabled="false"
        android:text="@string/result_draw"
        android:textColor="@color/design_default_color_background"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_result" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_player1_paper"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/kertas"
        app:layout_constraintBottom_toTopOf="@+id/iv_refresh"
        app:layout_constraintStart_toStartOf="@+id/tv_player1"
        app:layout_constraintTop_toBottomOf="@+id/tv_player1"
        app:layout_constraintVertical_bias="0.253"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_player_com_paper"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/kertas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_player_com"
        app:layout_constraintStart_toStartOf="@+id/tv_player_com"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_com"
        app:layout_constraintVertical_bias="0.203"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_player1_rock"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="3dp"
        android:src="@drawable/batu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_player1"
        app:layout_constraintTop_toBottomOf="@+id/tv_player1"
        app:layout_constraintVertical_bias="0.0"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_player_com_rock"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="0dp"
        android:src="@drawable/batu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_player_com"
        app:layout_constraintStart_toStartOf="@+id/tv_player_com"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_com"
        app:layout_constraintVertical_bias="0"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_player1_scissor"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="5dp"
        android:src="@drawable/gunting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_player1"
        app:layout_constraintTop_toBottomOf="@+id/tv_player1"
        app:layout_constraintVertical_bias="0.399"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:srcCompat="@tools:sample/avatars" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_player_com_scissor"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:padding="0dp"
        android:src="@drawable/gunting"
        app:layout_constraintBottom_toTopOf="@+id/iv_refresh"
        app:layout_constraintEnd_toEndOf="@+id/tv_player_com"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/tv_player_com"
        app:layout_constraintTop_toBottomOf="@+id/tv_player_com"
        app:layout_constraintVertical_bias="0.496"
        app:shapeAppearanceOverlay="@style/RoundedSquare"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_player1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_string_player1"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/tv_title_third_letter"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_player_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="216dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/tv_string_player_com"
        android:textColor="@color/design_default_color_secondary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_title_third_letter"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_refresh"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@color/design_default_color_background"
        android:padding="10dp"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvVs"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:fontFamily="sans-serif-black"
        android:rotation="-20"
        android:text="@string/result_vs"
        android:textColor="@color/red"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_result"
        app:layout_constraintEnd_toEndOf="@+id/tv_result2"
        app:layout_constraintStart_toStartOf="@+id/tv_result2" />


</androidx.constraintlayout.widget.ConstraintLayout>